# spet

./: README.md  pyproject.toml
src/: PCAN_RW.py  PCANlib.py  PEAK Settings.lnk  customDashboard.py  log example.txt  log module A only.txt  log module B only.txt  pyinstaller.txt  spetDashboard.py  spetUI.py  spetUI.pyw
